add 1 test class per each aadl example in osate