@@ -23,46 +23,25 @@
  *******************************************************************************/
 package org.osate.examples.tests;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.eclipse.emf.common.util.EList;
 import org.eclipse.xtext.testing.InjectWith;
 import org.eclipse.xtext.testing.XtextRunner;
-import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.osate.aadl2.AadlPackage;
-import org.osate.aadl2.Classifier;
-import org.osate.aadl2.SystemImplementation;
-import org.osate.aadl2.instance.SystemInstance;
-import org.osate.aadl2.instantiation.InstantiateModel;
 import org.osate.testsupport.Aadl2InjectorProvider;
-import org.osate.testsupport.TestHelper;
-
-import com.google.inject.Inject;
 
 
 @RunWith(XtextRunner.class)
 @InjectWith(Aadl2InjectorProvider.class)
-public class ContinuousSafetyRiskEvaluationTest {
-	@Inject
-	private TestHelper<AadlPackage> testHelper;
-	private String bundle = "org.osate.examples";
-	private String entry = "examples/continuous-safety-risk-evaluation/";
-	private List<String> files = Arrays.asList("acemlib.aadl", "AircraftSafetyExample_ACCAOARedundancy.aadl",
-			"AircraftSafetyExample_AOADiscrepancy.aadl", "AircraftSafetyExample_AOAVendors.aadl");
+public class ContinuousSafetyRiskEvaluationTest extends ExampleConfig {
+	public ContinuousSafetyRiskEvaluationTest() {
+		String entry = "examples/continuous-safety-risk-evaluation/AircraftSafetyExample_ACCAOARedundancy.aadl";
+		List<String> references = List.of(
+				this.bundle + "/examples/continuous-safety-risk-evaluation/AircraftSafetyExample_AOADiscrepancy.aadl",
+				this.bundle + "/examples/continuous-safety-risk-evaluation/AircraftSafetyExample_AOAVendors.aadl",
+				this.bundle + "/examples/continuous-safety-risk-evaluation/acemlib.aadl");
+		List<String> components = List.of("ac.TwoSensorSpec", "ac.TwoSensorVA", "ac.TwoSensorVB");
 
-	@Test
-	public void emptyTest() throws Exception {
-		for (String file : files) {
-			AadlPackage pkg = testHelper.parseBundleFile(bundle, entry + file);
-			final EList<Classifier> cls = pkg.getOwnedPublicSection().getOwnedClassifiers();
-			for (Classifier classifier : cls) {
-				if (classifier instanceof SystemImplementation) {
-					SystemImplementation impl = (SystemImplementation) classifier;
-					SystemInstance si = InstantiateModel.instantiate(impl);
-				}
-			}
-		}
+		addEntry(entry, references, components);
 	}
 }
