@@ -23,47 +23,24 @@
  *******************************************************************************/
 package org.osate.examples.tests;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.eclipse.emf.common.util.EList;
 import org.eclipse.xtext.testing.InjectWith;
 import org.eclipse.xtext.testing.XtextRunner;
-import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.osate.aadl2.AadlPackage;
-import org.osate.aadl2.Classifier;
-import org.osate.aadl2.SystemImplementation;
-import org.osate.aadl2.instance.SystemInstance;
-import org.osate.aadl2.instantiation.InstantiateModel;
 import org.osate.testsupport.Aadl2InjectorProvider;
-import org.osate.testsupport.TestHelper;
-
-import com.google.inject.Inject;
 
 
 @RunWith(XtextRunner.class)
 @InjectWith(Aadl2InjectorProvider.class)
-public class SafetyTutorialTest {
-	@Inject
-	private TestHelper<AadlPackage> testHelper;
-	private String bundle = "org.osate.examples";
-	private String entry = "examples/safety-tutorial/packages/";
-	private List<String> files = Arrays.asList("AFGErrorLibrary.aadl", "AutomatedFlightGuidance.aadl",
-			"FlightControl.aadl", "FlightSystem.aadl", "GPSErrorLibrary.aadl", "GPSParts.aadl", "GPSSystem.aadl",
-			"HardwareParts.aadl");
+public class SafetyTutorialTest extends ExampleConfig {
+	public SafetyTutorialTest() {
+		String entry = "examples/safety-tutorial/packages/GPSSystem.aadl";
+		List<String> references = List.of(this.bundle + "/examples/safety-tutorial/packages/GPSParts.aadl",
+				this.bundle + "/examples/safety-tutorial/packages/HardwareParts.aadl",
+				this.bundle + "/examples/safety-tutorial/packages/GPSErrorLibrary.aadl");
+		List<String> components = List.of("GPS.parts_SingleSensorTransient", "GPS.BasicBound", "GPS.basic");
 
-	@Test
-	public void emptyTest() throws Exception {
-		for (String file : files) {
-			AadlPackage pkg = testHelper.parseBundleFile(bundle, entry + file);
-			final EList<Classifier> cls = pkg.getOwnedPublicSection().getOwnedClassifiers();
-			for (Classifier classifier : cls) {
-				if (classifier instanceof SystemImplementation) {
-					SystemImplementation impl = (SystemImplementation) classifier;
-					SystemInstance si = InstantiateModel.instantiate(impl);
-				}
-			}
-		}
+		addEntry(entry, references, components);
 	}
 }
